fix(date picker): correct z-index of date picker wrapper
Related to: CAM-2988

--- a/webapps/client/scripts/task/styles.less
+++ b/webapps/client/scripts/task/styles.less
@@ -1,5 +1,10 @@
 
 .task-card {
+  header {
+    position: relative;
+    z-index: 15;
+  }
+
   .nav-tabs .glyphicon {
     margin-left: 5px;
   }
